--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,12 +5,11 @@ body {
 }
 
 .wrapper {
-    width: 100%;
     border: solid 0.3em gold;
-    z-index: 11;
-    position: relative;
-    background-color: white;
-    justify-content: space-between;
+}
+
+.wrapper img{
+    margin-left: 15px;
 }
 
 header {
@@ -23,7 +22,6 @@ header {
     background-color: rgb(243, 232, 243);
 }
 
-
 .logo {
     width: 10%;
     padding-left: 0;
@@ -32,113 +30,16 @@ header {
     vertical-align: middle;
 }
 
-.navbar {
-    width: 55%;
-    display: flex;
-    position: relative;
-    border: solid 0.3em brown;
-    justify-content: center;
-    float: none;
-    display: table-cell;
-    vertical-align: middle;
-    padding-left: 0;
-}
-
-.find {
-    width: 22%;
-    display: flex;
-    border: solid 0.3em darkblue;
-}
-
-.search-input{
-    width: 65%;
-    height: 25px;
-    align-self: center;
-}
-
-body {
-  font-family: 'Montserrat', 'Helevtica', sans-serif;
-  position: relative;
-  width: 100%;
-  background-color: #f2ecec;
+.jumbotron{
+    text-align: center;
+    padding: 10px;
 }
 
 
-.title-container {
-  position: absolute;
-  top: 38%;
-  left: 50%;
-  width: 80%;
-  margin: 0 auto;
-  text-align: center;
-  overflow: hidden;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
 
 
-.icons-container {
-  position: absolute;
-  top: 11px;
-  right: -25px;
-  width: 35px;
-  height: 35px;
-  overflow: hidden;
-}
 
-
-.icon-search {
-  position: relative;
-  top: 5px;
-  left: 8px;
-  width: 50%;
-  height: 50%;
-  opacity: 1;
-  border-radius: 50%;
-  border: 3px solid #c7d0f8;
-}
-
-.find i {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    padding-right: 12px;
-}
-
-.shop {
-    color: #020100;
-    background-color: yellow;
-}
-
-.hero_inner {
-    position: absolute;
-    /* vertical-align: middle;
-    padding: 55px 0;
-    z-index: 2; */
-    text-align-last: center;
-}
-
-.text-center {
-    text-align: center !important;
-}
-
-.text-center h1,
-h2 {
-    color: white;
-}
-
-.content img {
-    object-fit: cover;
-    vertical-align: middle;
-    padding-bottom: 10px;
-    display: inline;
-    width: inherit;
-}
-
+/**footer**/
 footer {
     display: flex;
     background-color: #282d32;
@@ -178,77 +79,20 @@ i.fas.fa-shopping-basket{
     padding-left: 50px;
 }
 
-/*    page 2 - liste-produit */
 
-h1{
-align-self: center;
+/*  body index */
+#app img{
+    max-width: 100%;
+	height: 170px;
 }
 
-.back {
-    align-self: center;
-    color: black;
-    align-content: start;
-}
-
-.content{
-    width: 100%;
-    border: solid 0.3em darkblue; 
+#app{
     display: flex;
-    justify-content: space-between;
-    overflow:hidden;
-}
-
-.contain{
-    border: solid 0.3em rgb(202, 59, 15); 
-    padding-left: 5px;
-    padding-top: 5px;
-    padding-right: 5px;
-    padding-bottom: 10px;
-    display: inline-block;
-    box-sizing: border-box;
     flex-wrap: wrap;
-    box-shadow: 0.2px 7px 30px gray;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    width: 10%;
+    justify-content: space-between;
+    padding: 10px;
 }
 
-.name{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-.price{
-justify-self: center;
-width: 160px;
-}
-
-.contain img {
-    width: 160px;
-    height: 136px;
-    display: inline;
-    object-fit: cover;
-    vertical-align: middle;
-  }
-
-  .add-to-cart{
-    color: black;
-    background-color: rgb(233, 208, 219);
-    height: 28px;
-    width: 170px;
-border-style: none;
-  }
-
-  .ajout_panier{
-      padding-top: 16px;
-  }
-
-
-  /* CSS */
-.dropdown:hover > #cart-dropdown{
-    display: block;
-}
 
  /* recap-command */
 #confirm-command{
