template pour toutes les pages

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -4,6 +4,11 @@ body {
     box-sizing: content-box;
 }
 
+.content{
+width: 80%;
+justify-content: center;
+}
+
 .wrapper img{
     margin-left: 15px;
 }
