--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,16 +1,21 @@
 body {
-    background-color: burlywood;
     width: 100%;
     box-sizing: content-box;
 }
 
-.content{
-width: 80%;
-justify-content: center;
+.content {
+    justify-content: center;
+    padding: 30px;
 }
 
-.wrapper img{
+.panier p, .recapitulation p{
+    text-align: center;
+    font-size: 20px;
+}
+
+.wrapper img {
     margin-left: 15px;
+   font-size: 20px;
 }
 
 header {
@@ -30,15 +35,21 @@ header {
     vertical-align: middle;
 }
 
-.jumbotron{
+.find{
+    padding-right: 60px;
+    padding-top: 20px;
+    justify-items: baseline;
+}
+
+.jumbotron {
     text-align: center;
     padding: 10px;
 }
 
-/**footer**/
-footer {
+ /**footer**/
+ footer {
     display: flex;
-    background-color: #282d32;
+    background-color: rgb(243, 232, 243);
     justify-content: center;
 }
 
@@ -52,7 +63,7 @@ ul {
 }
 
 li {
-    color: white;
+    color: black;
 }
 
 .reseaux {
@@ -61,7 +72,7 @@ li {
 
 .reseaux i {
     list-style: none;
-    color: white;
+    color: black;
     padding-left: 4px;
 }
 
@@ -70,36 +81,45 @@ li {
     font-size: large;
 }
 
-i.fas.fa-shopping-basket{
+i.fas.fa-shopping-basket {
     align-items: center;
     padding-left: 50px;
 }
-
+ 
 
 /*  body index */
-#app img{
+#app img {
     max-width: 100%;
-	height: 170px;
+    height: 170px;
 }
 
-#app{
+#app {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 10px;
 }
 
-#nameProduit{
+#nameProduit {
     text-overflow: ellipsis;
 }
 
- /* recap-command */
-#confirm-command{
-background-color: rgb(247, 95, 95);
+/* recap-command */
+#confirm-command {
+    background-color: rgb(247, 95, 95);
 }
 
 
 /* panier */
-#totalLabel{
-    text-align:right;
+#totalLabel {
+    text-align: right;
+}
+
+.formulaire{
+    padding-top: 80px;
+}
+/* produit */
+.ajout_panier{
+    padding-top: 3rem;
+    text-align: right;
 }
