--- a/frontend/style.css
+++ b/frontend/style.css
@@ -36,6 +36,7 @@ header {
 }
 
 .find{
+    justify-content: space-between;
     padding-right: 60px;
     padding-top: 20px;
     justify-items: baseline;
@@ -84,14 +85,11 @@ li {
 i.fas.fa-shopping-basket {
     align-items: center;
     padding-left: 50px;
+    padding-right: 10px;
 }
  
 
 /*  body index */
-#app img {
-    max-width: 100%;
-    height: 170px;
-}
 
 #app {
     display: flex;
@@ -109,6 +107,13 @@ i.fas.fa-shopping-basket {
     background-color: rgb(247, 95, 95);
 }
 
+.produit_notButton{
+height: 70%;
+}
+
+.container{
+overflow: hidden;
+}
 
 /* panier */
 #totalLabel {
@@ -116,10 +121,25 @@ i.fas.fa-shopping-basket {
 }
 
 .formulaire{
-    padding-top: 80px;
+margin-top: 70px;
 }
+
 /* produit */
 .ajout_panier{
     padding-top: 3rem;
     text-align: right;
+}
+
+.content_produit{
+    display: flex;
+    justify-content: space-between;
+}
+
+.about{
+    width: 71%;
+    padding-top: 20px;
+}
+
+#lenses{
+    width: 27%;
 }
